tests/javacresults/fail_declare_var_twice.txt
Intermediate.java:1: error: class, interface, or enum expected
Fatal error: exception Failure("symbol x declared twice in same scope")
^
1 error
